Remocao de svg inutil
Remocao de svg inutil da parte do adm.html

--- a/mockup/html/adm.html
+++ b/mockup/html/adm.html
@@ -46,47 +46,32 @@
         <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
             <div class="feature col">
                 <div class="feature-icon bg-primary bg-gradient">
-                    <svg class="bi" width="1em" height="1em">
-                        <!-- icon here -->
-                    </svg>
+                    <img id="headerLogo" src="../images/paw.svg">
                 </div>
                 <h2>Adicionar Produto</h2>
                 <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
                 <a href="#" class="btn btn-primary">
                     Call to action
-                    <svg class="bi" width="1em" height="1em">
-                        <!-- icon here -->
-                    </svg>
                 </a>
             </div>
             <div class="feature col">
                 <div class="feature-icon bg-primary bg-gradient">
-                    <svg class="bi" width="1em" height="1em">
-                        <!-- icon here -->
-                    </svg>
+                    <!-- Imagem aq -->
                 </div>
                 <h2>Adicionar outro Ademir</h2>
                 <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
                 <a href="#" class="btn btn-primary">
                     Call to action
-                    <svg class="bi" width="1em" height="1em">
-                        <!-- icon here -->
-                    </svg>
                 </a>
             </div>
             <div class="feature col">
                 <div class="feature-icon bg-primary bg-gradient">
-                    <svg class="bi" width="1em" height="1em">
-                        <!-- icon here -->
-                    </svg>
+                    <!-- Imagem aq -->
                 </div>
                 <h2>Gerir Clientes</h2>
                 <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
                 <a href="#" class="btn btn-primary">
                     Call to action
-                    <svg class="bi" width="1em" height="1em">
-                        <!-- icon here -->
-                    </svg>
                 </a>
             </div>
         </div>
@@ -99,47 +84,32 @@
         <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
             <div class="feature col">
                 <div class="feature-icon bg-primary bg-gradient">
-                    <svg class="bi" width="1em" height="1em">
-                        <!-- icon here -->
-                    </svg>
+                    <!-- Imagem aq -->
                 </div>
                 <h2>Adicionar Produto</h2>
                 <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
                 <a href="#" class="btn btn-primary">
                     Call to action
-                    <svg class="bi" width="1em" height="1em">
-                        <!-- icon here -->
-                    </svg>
                 </a>
             </div>
             <div class="feature col">
                 <div class="feature-icon bg-primary bg-gradient">
-                    <svg class="bi" width="1em" height="1em">
-                        <!-- icon here -->
-                    </svg>
+                    <!-- Imagem aq -->
                 </div>
                 <h2>Adicionar outro Ademir</h2>
                 <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
                 <a href="#" class="btn btn-primary">
                     Call to action
-                    <svg class="bi" width="1em" height="1em">
-                        <!-- icon here -->
-                    </svg>
                 </a>
             </div>
             <div class="feature col">
                 <div class="feature-icon bg-primary bg-gradient">
-                    <svg class="bi" width="1em" height="1em">
-                        <!-- icon here -->
-                    </svg>
+                    <!-- Imagem aq -->
                 </div>
                 <h2>Gerir Clientes</h2>
                 <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
                 <a href="#" class="btn btn-primary">
-                    Call to action
-                    <svg class="bi" width="1em" height="1em">
-                        <!-- icon here -->
-                    </svg>
+                    Botao teste
                 </a>
             </div>
         </div>
