icons updates at the adm page

--- a/mockup/html/adm.html
+++ b/mockup/html/adm.html
@@ -42,36 +42,36 @@
 
     <!-- Content -->
     <div class="container px-4 py-5" id="featured-3">
-        <h2 class="pb-2 border-bottom">Olá ademir, oque quer fazer?</h2>
+        <h2 class="pb-2 border-bottom">Hello Ademir, what you want to do?</h2>
         <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
             <div class="feature col">
                 <div class="feature-icon bg-primary bg-gradient">
-                    <img id="headerLogo" src="../images/paw.svg">
+                    <img id="headerLogo" src="../images/stock.svg">
                 </div>
-                <h2>Adicionar Produto</h2>
-                <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
+                <h2>Manage Stock</h2>
+                <p>Here you can control all itens stock.</p>
                 <a href="#" class="btn btn-primary">
-                    Call to action
+                    Go!
                 </a>
             </div>
             <div class="feature col">
                 <div class="feature-icon bg-primary bg-gradient">
-                    <!-- Imagem aq -->
+                    <img id="headerLogo" src="../images/group.svg">
                 </div>
-                <h2>Adicionar outro Ademir</h2>
-                <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
+                <h2>Add more Ademirs</h2>
+                <p>Here you can add more adms for help you manage the store.</p>
                 <a href="#" class="btn btn-primary">
-                    Call to action
+                    Go!
                 </a>
             </div>
             <div class="feature col">
                 <div class="feature-icon bg-primary bg-gradient">
-                    <!-- Imagem aq -->
+                    <img id="headerLogo" src="../images/clients.svg">
                 </div>
-                <h2>Gerir Clientes</h2>
-                <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
+                <h2>Manage Costumers</h2>
+                <p>Here you can acess the costumers data and another informations.</p>
                 <a href="#" class="btn btn-primary">
-                    Call to action
+                    Go!
                 </a>
             </div>
         </div>
@@ -80,36 +80,36 @@
     <div class="divider"></div>
 
     <div class="container px-4 py-5" id="featured-3">
-        <h2 class="pb-2 border-bottom">Olá ademir, oque quer fazer?</h2>
+        <h2 class="pb-2 border-bottom">Manage Products</h2>
         <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
             <div class="feature col">
                 <div class="feature-icon bg-primary bg-gradient">
-                    <!-- Imagem aq -->
+                    <img id="headerLogo" src="../images/paw.svg">
                 </div>
-                <h2>Adicionar Produto</h2>
-                <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
+                <h2>Add Acessories</h2>
+                <p>Here you can add new acessories to the store.</p>
                 <a href="#" class="btn btn-primary">
-                    Call to action
+                    Go!
                 </a>
             </div>
             <div class="feature col">
                 <div class="feature-icon bg-primary bg-gradient">
-                    <!-- Imagem aq -->
+                    <img id="headerLogo" src="../images/dog-bone.svg">
                 </div>
-                <h2>Adicionar outro Ademir</h2>
-                <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
+                <h2>Add Dog Product</h2>
+                <p>Here you can add new dog products to the store.</p>
                 <a href="#" class="btn btn-primary">
-                    Call to action
+                    Go!
                 </a>
             </div>
             <div class="feature col">
                 <div class="feature-icon bg-primary bg-gradient">
-                    <!-- Imagem aq -->
+                    <img id="headerLogo" src="../images/cat-prod.svg">
                 </div>
-                <h2>Gerir Clientes</h2>
-                <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
+                <h2>Add Cat Product</h2>
+                <p>Here you can add new cat products to the store.</p>
                 <a href="#" class="btn btn-primary">
-                    Botao teste
+                    Go!
                 </a>
             </div>
         </div>
