Central logo branch

--- a/mockup/index.html
+++ b/mockup/index.html
@@ -32,6 +32,7 @@
                     <li><a href="html/dogs.html" class="nav-link px-2">Dogs</a></li>
                     <li><a href="html/cats.html" class="nav-link px-2">Cats</a></li>
                 </ul>
+                <img src="images/Shop-do-Pet.svg" alt="branch logo" id="Branch">
 
                 <div class="text-end">
                     <a href="html/login.html"><button type="button" class="btn btn-outline-light me-2">Login</button></a>
