--- a/mockup/html/adm.html
+++ b/mockup/html/adm.html
@@ -31,7 +31,7 @@
                     <li><a href="dogs.html" class="nav-link px-2">Dogs</a></li>
                     <li><a href="cats.html" class="nav-link px-2">Cats</a></li>
                 </ul>
-
+                <img src="../images/Shop-do-Pet.svg" alt="branch logo" id="Branch">
                 <div class="text-end">
                     <a href="login.html"><button type="button" class="btn btn-outline-light me-2">Login</button></a>
                     <a href="sign_up.html"><button type="button" class="btn btn-dark">Sign up</button></a>
@@ -50,6 +50,7 @@
                 </div>
                 <h2>Manage Stock</h2>
                 <p>Here you can control all itens stock.</p>
+                <br>
                 <a href="#" class="btn btn-primary">
                     Go!
                 </a>
