--- a/mockup/html/cats.html
+++ b/mockup/html/cats.html
@@ -31,7 +31,8 @@
                     <li><a href="dogs.html" class="nav-link px-2">Dogs</a></li>
                     <li><a href="" class="nav-link px-2 fw-bold">Cats</a></li>
                 </ul>
-
+                <img src="../images/Shop-do-Pet.svg" alt="branch logo" id="Branch">
+                
                 <div class="text-end">
                     <a href="login.html"><button type="button" class="btn btn-outline-light me-2">Login</button></a>
                     <a href="sign_up.html"><button type="button" class="btn btn-dark">Sign up</button></a>
