--- a/mockup/html/sign_up.html
+++ b/mockup/html/sign_up.html
@@ -30,7 +30,8 @@
                     <li><a href="dogs.html" class="nav-link px-2">Dogs</a></li>
                     <li><a href="cats.html" class="nav-link px-2">Cats</a></li>
                 </ul>
-
+                <img src="../images/Shop-do-Pet.svg" alt="branch logo" id="Branch">
+                
                 <div class="text-end">
                     <a href="login.html"><button type="button" class="btn btn-outline-light me-2">Login</button></a>
                     <a href="#"><button type="button" class="btn btn-dark">Sign up</button></a>
