Adm Button Changes

--- a/mockup/html/adm.html
+++ b/mockup/html/adm.html
@@ -32,6 +32,7 @@
                     <li><a href="cats.html" class="nav-link px-2">Cats</a></li>
                 </ul>
                 <img src="../images/Shop-do-Pet.svg" alt="branch logo" id="Branch">
+                
                 <div class="text-end">
                     <a href="login.html"><button type="button" class="btn btn-outline-light me-2">Login</button></a>
                     <a href="sign_up.html"><button type="button" class="btn btn-dark">Sign up</button></a>
@@ -42,7 +43,7 @@
 
     <!-- Content -->
     <div class="container px-4 py-5" id="featured-3">
-        <h2 class="pb-2 border-bottom">Hello Ademir, what you want to do?</h2>
+        <h2 class="pb-2 border-bottom">Hello Ademir, what do you want to do?</h2>
         <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
             <div class="feature col">
                 <div class="feature-icon bg-primary bg-gradient">
@@ -52,7 +53,7 @@
                 <p>Here you can control all itens stock.</p>
                 <br>
                 <a href="#" class="btn btn-primary">
-                    Go!
+                    Go Now!
                 </a>
             </div>
             <div class="feature col">
@@ -62,7 +63,7 @@
                 <h2>Add more Ademirs</h2>
                 <p>Here you can add more adms for help you manage the store.</p>
                 <a href="#" class="btn btn-primary">
-                    Go!
+                    Go Now!
                 </a>
             </div>
             <div class="feature col">
@@ -72,7 +73,7 @@
                 <h2>Manage Costumers</h2>
                 <p>Here you can acess the costumers data and another informations.</p>
                 <a href="#" class="btn btn-primary">
-                    Go!
+                     Go Now!
                 </a>
             </div>
         </div>
@@ -90,7 +91,7 @@
                 <h2>Add Acessories</h2>
                 <p>Here you can add new acessories to the store.</p>
                 <a href="#" class="btn btn-primary">
-                    Go!
+                    Go Now!
                 </a>
             </div>
             <div class="feature col">
@@ -100,7 +101,7 @@
                 <h2>Add Dog Product</h2>
                 <p>Here you can add new dog products to the store.</p>
                 <a href="#" class="btn btn-primary">
-                    Go!
+                    Go Now!
                 </a>
             </div>
             <div class="feature col">
@@ -110,7 +111,7 @@
                 <h2>Add Cat Product</h2>
                 <p>Here you can add new cat products to the store.</p>
                 <a href="#" class="btn btn-primary">
-                    Go!
+                    Go Now!
                 </a>
             </div>
         </div>
