--- a/mockup/html/login.html
+++ b/mockup/html/login.html
@@ -30,7 +30,7 @@
                     <li><a href="dogs.html" class="nav-link px-2">Dogs</a></li>
                     <li><a href="cats.html" class="nav-link px-2">Cats</a></li>
                 </ul>
-                <img src="../images/Shop-do-Pet.svg" alt="branch logo" id="Branch">
+                <img src="../images/Shop-do-Pet.svg" alt="branch logo" id="Branch2">
                 
                 <div class="text-end">
                     <a href="#"><button type="button" class="btn btn-outline-light me-2">Login</button></a>
