--- a/mockup/html/accessories.html
+++ b/mockup/html/accessories.html
@@ -32,11 +32,11 @@
                     <li><a href="cats.html" class="nav-link px-2">Cats</a></li>
                 </ul>
                 <img src="../images/Shop-do-Pet.svg" alt="branch logo" id="Branch1">
-                
+
                 <div class="text-end">
                     <a href="login.html"><button type="button" class="btn btn-outline-light me-2">Login</button></a>
                     <a href="sign_up.html"><button type="button" class="btn btn-dark">Sign up</button></a>
-                    <a href="html/"><button type="button" class="btn btn-outline-info me-2"><img src="../images/cart.svg" id="cartLogo"></button></a>
+                    <a href=""><button type="button" class="btn btn-outline-info me-2"><img src="../images/cart.svg" id="cartLogo"></button></a>
                 </div>
             </div>
         </div>
