Fixed center header logo responsiveness and resized it

--- a/mockup/html/login.html
+++ b/mockup/html/login.html
@@ -30,8 +30,10 @@
                     <li><a href="dogs.html" class="nav-link px-2">Dogs</a></li>
                     <li><a href="cats.html" class="nav-link px-2">Cats</a></li>
                 </ul>
-                <img src="../images/Shop-do-Pet.svg" alt="branch logo" id="Branch2">
                 
+                <!-- Center logo -->
+                <img class="navbar-brand d-none d-xl-block" src="../images/Shop-do-Pet.svg" alt="Shop do Pet Logo">
+
                 <div class="text-end">
                     <a href="#"><button type="button" class="btn btn-outline-light me-2">Login</button></a>
                     <a href="sign_up.html"><button type="button" class="btn btn-dark">Sign up</button></a>
