--- a/mockup/index.html
+++ b/mockup/index.html
@@ -32,8 +32,10 @@
                     <li><a href="html/dogs.html" class="nav-link px-2">Dogs</a></li>
                     <li><a href="html/cats.html" class="nav-link px-2">Cats</a></li>
                 </ul>
-                <img src="images/Shop-do-Pet.svg" alt="branch logo" id="Branch1">
                 
+                <!-- Center logo -->
+                <img class="navbar-brand d-none d-xl-block" src="images/Shop-do-Pet.svg" alt="Shop do Pet Logo">
+
                 <div class="text-end">
                     <a href="html/login.html"><button type="button" class="btn btn-outline-light me-2">Login</button></a>
                     <a href="html/sign_up.html"><button type="button" class="btn btn-dark">Sign up</button></a>
@@ -55,7 +57,7 @@
         </header>
 
         <div id="accJumbo" class="p-5 mb-4 bg-light border rounded-3">
-            <div  class="container-fluid py-5 text-white">
+            <div class="container-fluid py-5 text-white">
                 <h1 class="display-5 fw-bold">Custom Accessories</h1>
                 <p class="col-md-8 fs-4">Check out our custom acessories for your pet!</p>
                 <a class="btn btn-primary" href="html/accessories.html" role="button">Take me there</a>
