--- a/mockup/html/cats.html
+++ b/mockup/html/cats.html
@@ -31,8 +31,10 @@
                     <li><a href="dogs.html" class="nav-link px-2">Dogs</a></li>
                     <li><a href="" class="nav-link px-2 fw-bold">Cats</a></li>
                 </ul>
-                <img src="../images/Shop-do-Pet.svg" alt="branch logo" id="Branch1">
 
+                <!-- Center logo -->
+                <img class="navbar-brand d-none d-xl-block" src="../images/Shop-do-Pet.svg" alt="Shop do Pet Logo">
+                
                 <div class="text-end">
                     <a href="login.html"><button type="button" class="btn btn-outline-light me-2">Login</button></a>
                     <a href="sign_up.html"><button type="button" class="btn btn-dark">Sign up</button></a>
