--- a/mockup/html/dogs.html
+++ b/mockup/html/dogs.html
@@ -31,7 +31,9 @@
                     <li><a href="" class="nav-link px-2 fw-bold">Dogs</a></li>
                     <li><a href="cats.html" class="nav-link px-2">Cats</a></li>
                 </ul>
-                <img src="../images/Shop-do-Pet.svg" alt="branch logo" id="Branch1">
+                
+                <!-- Center logo -->
+                <img class="navbar-brand d-none d-xl-block" src="../images/Shop-do-Pet.svg" alt="Shop do Pet Logo">
 
                 <div class="text-end">
                     <a href="login.html"><button type="button" class="btn btn-outline-light me-2">Login</button></a>
