--- a/mockup/html/adm.html
+++ b/mockup/html/adm.html
@@ -44,12 +44,12 @@
     </header>
 
     <!-- Content -->
-    <div class="container px-4 py-5" id="featured-3">
+    <div class="container px-4 py-5">
         <h2 class="pb-2 border-bottom">Hello Ademir, what do you want to do?</h2>
         <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
             <div class="feature col">
                 <div class="feature-icon bg-primary bg-gradient">
-                    <img id="headerLogo" src="../images/stock.svg">
+                    <img id="icons" src="../images/stock.svg">
                 </div>
                 <h2>Manage Stock</h2>
                 <p>Here you can control all itens stock.</p>
@@ -60,7 +60,7 @@
             </div>
             <div class="feature col">
                 <div class="feature-icon bg-primary bg-gradient">
-                    <img id="headerLogo" src="../images/group.svg">
+                    <img id="icons" src="../images/group.svg">
                 </div>
                 <h2>Add more Ademirs</h2>
                 <p>Here you can add more adms for help you manage the store.</p>
@@ -70,12 +70,12 @@
             </div>
             <div class="feature col">
                 <div class="feature-icon bg-primary bg-gradient">
-                    <img id="headerLogo" src="../images/clients.svg">
+                    <img id="icons" src="../images/clients.svg">
                 </div>
                 <h2>Manage Costumers</h2>
                 <p>Here you can acess the costumers data and another informations.</p>
                 <a href="#" class="btn btn-primary">
-                     Go Now!
+                    Go Now!
                 </a>
             </div>
         </div>
@@ -83,12 +83,12 @@
 
     <div class="divider"></div>
 
-    <div class="container px-4 py-5" id="featured-3">
+    <div class="container px-4 py-5">
         <h2 class="pb-2 border-bottom">Manage Products</h2>
         <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
             <div class="feature col">
                 <div class="feature-icon bg-primary bg-gradient">
-                    <img id="headerLogo" src="../images/paw.svg">
+                    <img id="icons" src="../images/paw.svg">
                 </div>
                 <h2>Add Acessories</h2>
                 <p>Here you can add new acessories to the store.</p>
@@ -98,7 +98,7 @@
             </div>
             <div class="feature col">
                 <div class="feature-icon bg-primary bg-gradient">
-                    <img id="headerLogo" src="../images/dog-bone.svg">
+                    <img id="icons" src="../images/dog-bone.svg">
                 </div>
                 <h2>Add Dog Product</h2>
                 <p>Here you can add new dog products to the store.</p>
@@ -108,7 +108,7 @@
             </div>
             <div class="feature col">
                 <div class="feature-icon bg-primary bg-gradient">
-                    <img id="headerLogo" src="../images/cat-prod.svg">
+                    <img id="icons" src="../images/cat-prod.svg">
                 </div>
                 <h2>Add Cat Product</h2>
                 <p>Here you can add new cat products to the store.</p>
