Footer temporary fix in about/login/singup

--- a/mockup/html/about.html
+++ b/mockup/html/about.html
@@ -63,11 +63,12 @@
                 <svg class="bi me-2" width="150" height="130" role="img" aria-label="Logo">
                     <img src="../images/usp_logo.svg" width="200" />
                 </svg>
-
             </div>
         </div>
-
     </div>
+    
+    <!-- Temporary fix, we plan on adding more stuff to this page -->
+    <br><br><br><br><br><br><br><br>
 
     <!-- Footer -->
     <footer class="pt-3 mt-4 border-top bg-light">
