--- a/mockup/html/login.html
+++ b/mockup/html/login.html
@@ -30,7 +30,7 @@
                     <li><a href="dogs.html" class="nav-link px-2">Dogs</a></li>
                     <li><a href="cats.html" class="nav-link px-2">Cats</a></li>
                 </ul>
-                
+
                 <!-- Center logo -->
                 <img class="navbar-brand d-none d-xl-block" src="../images/Shop-do-Pet.svg" alt="Shop do Pet Logo">
 
@@ -70,9 +70,10 @@
                 <button type="button" class="btn btn-dark">Get in!</a>
             </div>
         </div>
-
-
     </div>
+
+    <!-- Temporary fix, we plan on changing the design of this page -->
+    <br><br><br><br><br><br><br><br><br><br><br><br>
 
     <!-- Footer -->
     <footer class="pt-3 mt-4 border-top bg-light">
