--- a/mockup/html/sign_up.html
+++ b/mockup/html/sign_up.html
@@ -72,9 +72,10 @@
                 <button type="button" class="btn btn-dark">Get in!</a>
             </div>
         </div>
-
-
     </div>
+
+    <!-- Temporary fix, we plan on changing the design of this page -->
+    <br><br><br><br><br><br><br><br><br><br>
 
     <!-- Footer -->
     <footer class="pt-3 mt-4 border-top bg-light">
