Fixed some texts in adm page

--- a/mockup/html/adm.html
+++ b/mockup/html/adm.html
@@ -52,7 +52,7 @@
                     <img id="icons" src="../images/stock.svg">
                 </div>
                 <h2>Manage Stock</h2>
-                <p>Here you can control all itens stock.</p>
+                <p>Control all itens in stock.</p>
                 <br>
                 <a href="#" class="btn btn-primary">
                     Go Now!
@@ -62,8 +62,8 @@
                 <div class="feature-icon bg-primary bg-gradient">
                     <img id="icons" src="../images/group.svg">
                 </div>
-                <h2>Add more Ademirs</h2>
-                <p>Here you can add more adms for help you manage the store.</p>
+                <h2>Manage Ademirs</h2>
+                <p>Add or remove adms to help you manage the store.</p>
                 <a href="#" class="btn btn-primary">
                     Go Now!
                 </a>
@@ -73,7 +73,7 @@
                     <img id="icons" src="../images/clients.svg">
                 </div>
                 <h2>Manage Costumers</h2>
-                <p>Here you can acess the costumers data and another informations.</p>
+                <p>Acess the costumers data and another informations.</p>
                 <a href="#" class="btn btn-primary">
                     Go Now!
                 </a>
@@ -90,8 +90,8 @@
                 <div class="feature-icon bg-primary bg-gradient">
                     <img id="icons" src="../images/paw.svg">
                 </div>
-                <h2>Add Acessories</h2>
-                <p>Here you can add new acessories to the store.</p>
+                <h2>Manage Acessories</h2>
+                <p>Add or remove acessories to the store.</p>
                 <a href="#" class="btn btn-primary">
                     Go Now!
                 </a>
@@ -101,7 +101,7 @@
                     <img id="icons" src="../images/dog-bone.svg">
                 </div>
                 <h2>Add Dog Product</h2>
-                <p>Here you can add new dog products to the store.</p>
+                <p>Add or remove dog products to the store.</p>
                 <a href="#" class="btn btn-primary">
                     Go Now!
                 </a>
@@ -111,7 +111,7 @@
                     <img id="icons" src="../images/cat-prod.svg">
                 </div>
                 <h2>Add Cat Product</h2>
-                <p>Here you can add new cat products to the store.</p>
+                <p>Add or remove cat products to the store.</p>
                 <a href="#" class="btn btn-primary">
                     Go Now!
                 </a>
