--- a/mockup/html/sign_up.html
+++ b/mockup/html/sign_up.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width = device-width, initial-scale = 1">
-    <title>About</title>
+    <title>Sign Up</title>
     <link rel="shortcut icon" type="image/svg" href="../images/favicon.ico.svg">
     <!-- Bootstrap core CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
@@ -12,6 +12,7 @@
     <link href="../css/headers.css" rel="stylesheet">
     <link href="../css/logos.css" rel="stylesheet">
     <link href="../css/format.css" rel="stylesheet">
+    <link href="../css/login_signup.css" rel="stylesheet">
 </head>
 
 <body>
@@ -43,35 +44,38 @@
     </header>
 
     <div class="container py-4">
-        <header class="pb-3 mb-4 border-bottom">
-            <div class="d-flex align-items-center text-dark text-decoration-none">
-                <span class="fs-4">Make your registration</span>
-            </div>
-        </header>
+        
+        <main class="form-signin text-center">
+            <form>
 
-        <div style="display: flex; justify-content: center;">
-            <div class="col-md-6" style="display: flex; justify-content: center;">
-                <form>
-                    Name:<br><input type="text" name="name"><br>
-                    E-mail:<br><input type="email" name="email"><br>
-                    Password:<br><input type="password" name="password"><br>
+              <h1 class="h3 mb-3 fw-normal">Make your register</h1>
 
-                </form>
-            </div>
-        </div>
+              <div class="form-floating">
+                <input type="text" class="form-control" id="Name" placeholder="name@example.com">
+                <label for="floatingInput">Name</label>
+              </div>
 
-        <div style="display: flex; justify-content: center;">
-            <div class="col-md-3" style="display: flex; justify-content: center;">
-                <a href="login.html">Already have a registration? Log in!</a>
-            </div>
-        </div>
+              <div class="form-floating">
+                <input type="email" class="form-control" id="Email" placeholder="name@example.com">
+                <label for="floatingInput">Email address</label>
+              </div>
+              <div class="form-floating">
+                <input type="password" class="form-control" id="Password" placeholder="Password">
+                <label for="floatingPassword">Password</label>
+              </div>
+              <div class="form-floating">
+                <input type="password" class="form-control" id="RePassword" placeholder="Password">
+                <label for="floatingPassword">Re-enter password</label>
+              </div>
+          
+              <div class="mb-3">
+                <a href="sign_up.html">Already have a registration? Log in!</a>
+              </div>
 
-        <br>
-        <div style="display: flex; justify-content: center;">
-            <div class="col-md-3" style="display: flex; justify-content: center;">
-                <button type="button" class="btn btn-dark">Get in!</a>
-            </div>
-        </div>
+              <button class="w-100 btn btn-lg btn-dark" type="submit">Sign up</button>
+            </form>
+          </main>
+
     </div>
 
     <!-- Temporary fix, we plan on changing the design of this page -->
