Changing href link on Sign Up page

--- a/mockup/html/sign_up.html
+++ b/mockup/html/sign_up.html
@@ -69,7 +69,7 @@
               </div>
           
               <div class="mb-3">
-                <a href="sign_up.html">Already have a registration? Log in!</a>
+                <a href="login.html">Already have a registration? Log in!</a>
               </div>
 
               <button class="w-100 btn btn-lg btn-dark" type="submit">Sign up</button>
