Better organization in images folder

--- a/mockup/html/about.html
+++ b/mockup/html/about.html
@@ -5,9 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width = device-width, initial-scale = 1">
     <title>About</title>
-    <link rel="shortcut icon" type="image/svg" href="../images/paw.svg">
-    <!-- Bootstrap core CSS -->
+    <link rel="shortcut icon" type="image/svg" href="../images/logos/paw.svg">
+    <!-- Bootstrap and Fontawesome CDNs-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link href="../css/headers.css" rel="stylesheet">
     <link href="../css/logos.css" rel="stylesheet">
@@ -21,7 +22,7 @@
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                 <a href="../index.html" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
                     <svg class="bi me-2" width="40" height="32" role="img" aria-label="Logo">
-                        <img id="headerLogo" src="../images/paw.svg" />
+                        <img id="headerLogo" src="../images/logos/paw.svg" />
                     </svg>
                 </a>
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
@@ -32,12 +33,12 @@
                 </ul>
 
                 <!-- Center logo -->
-                <img class="navbar-brand d-none d-xl-block" src="../images/Shop-do-Pet.svg" alt="Shop do Pet Logo">
+                <img class="navbar-brand d-none d-xl-block" src="../images/logos/Shop-do-Pet.svg" alt="Shop do Pet Logo">
 
                 <div class="text-end">
                     <a href="login.html"><button type="button" class="btn btn-outline-light me-2">Login</button></a>
                     <a href="sign_up.html"><button type="button" class="btn btn-dark">Sign up</button></a>
-                    <a href=""><button type="button" class="btn btn-outline-info me-2"><img src="../images/cart.svg" id="cartLogo"></button></a>
+                    <a href=""><button type="button" class="btn btn-outline-info me-2"><img src="../images/logos/cart.svg" id="cartLogo"></button></a>
                 </div>
             </div>
         </div>
@@ -61,7 +62,7 @@
             </div>
             <div class="col-md-6">
                 <svg class="bi me-2" width="150" height="130" role="img" aria-label="Logo">
-                    <img src="../images/usp_logo.svg" width="200" />
+                    <img src="../images/logos/usp_logo.svg" width="200" />
                 </svg>
             </div>
         </div>
@@ -104,8 +105,7 @@
         </div>
     </footer>
 
-    <!-- Bootstrap, Font Awesome and jquery links  -->
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <!-- Bootstrap and jquery links  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </body>
