--- a/mockup/html/adm.html
+++ b/mockup/html/adm.html
@@ -5,9 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width = device-width, initial-scale = 1">
     <title>ADM</title>
-    <link rel="shortcut icon" type="image/svg" href="../images/paw.svg">
-    <!-- Bootstrap core CSS -->
+    <link rel="shortcut icon" type="image/svg" href="../images/logos/paw.svg">
+    <!-- Bootstrap and Fontawesome CDNs-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link href="../css/headers.css" rel="stylesheet">
     <link href="../css/logos.css" rel="stylesheet">
@@ -22,7 +23,7 @@
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                 <a href="../index.html" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
                     <svg class="bi me-2" width="40" height="32" role="img" aria-label="Logo">
-                        <img id="headerLogo" src="../images/paw.svg" />
+                        <img id="headerLogo" src="../images/logos/paw.svg" />
                     </svg>
                 </a>
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
@@ -33,7 +34,7 @@
                 </ul>
 
                 <!-- Center logo -->
-                <img class="navbar-brand d-none d-xl-block" src="../images/Shop-do-Pet.svg" alt="Shop do Pet Logo">
+                <img class="navbar-brand d-none d-xl-block" src="../images/logos/Shop-do-Pet.svg" alt="Shop do Pet Logo">
 
                 <div class="text-end">
                     <a href="login.html"><button type="button" class="btn btn-outline-light me-2">Login</button></a>
@@ -49,7 +50,7 @@
         <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
             <div class="feature col">
                 <div class="feature-icon bg-primary bg-gradient">
-                    <img id="icons" src="../images/stock.svg">
+                    <img id="icons" src="../images/adm/stock.svg">
                 </div>
                 <h2>Manage Stock</h2>
                 <p>Control all itens in stock.</p>
@@ -60,7 +61,7 @@
             </div>
             <div class="feature col">
                 <div class="feature-icon bg-primary bg-gradient">
-                    <img id="icons" src="../images/group.svg">
+                    <img id="icons" src="../images/adm/group.svg">
                 </div>
                 <h2>Manage Ademirs</h2>
                 <p>Add or remove adms to help you manage the store.</p>
@@ -70,7 +71,7 @@
             </div>
             <div class="feature col">
                 <div class="feature-icon bg-primary bg-gradient">
-                    <img id="icons" src="../images/clients.svg">
+                    <img id="icons" src="../images/adm/clients.svg">
                 </div>
                 <h2>Manage Costumers</h2>
                 <p>Acess the costumers data and another informations.</p>
@@ -88,7 +89,7 @@
         <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
             <div class="feature col">
                 <div class="feature-icon bg-primary bg-gradient">
-                    <img id="icons" src="../images/paw.svg">
+                    <img id="icons" src="../images/logos/paw.svg">
                 </div>
                 <h2>Manage Acessories</h2>
                 <p>Add or remove acessories to the store.</p>
@@ -98,7 +99,7 @@
             </div>
             <div class="feature col">
                 <div class="feature-icon bg-primary bg-gradient">
-                    <img id="icons" src="../images/dog-bone.svg">
+                    <img id="icons" src="../images/adm/dog-bone.svg">
                 </div>
                 <h2>Add Dog Product</h2>
                 <p>Add or remove dog products to the store.</p>
@@ -108,7 +109,7 @@
             </div>
             <div class="feature col">
                 <div class="feature-icon bg-primary bg-gradient">
-                    <img id="icons" src="../images/cat-prod.svg">
+                    <img id="icons" src="../images/adm/cat-prod.svg">
                 </div>
                 <h2>Add Cat Product</h2>
                 <p>Add or remove cat products to the store.</p>
@@ -153,8 +154,7 @@
         </div>
     </footer>
 
-    <!-- Bootstrap, Font Awesome and jquery links  -->
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <!-- Bootstrap and jquery links  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </body>
