--- a/mockup/html/login.html
+++ b/mockup/html/login.html
@@ -5,9 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width = device-width, initial-scale = 1">
     <title>Login</title>
-    <link rel="shortcut icon" type="image/svg" href="../images/favicon.ico.svg">
-    <!-- Bootstrap core CSS -->
+    <link rel="shortcut icon" type="image/svg" href="../images/logos/paw.svg">
+    <!-- Bootstrap and Fontawesome CDNs-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
     <link href="../css/headers.css" rel="stylesheet">
     <link href="../css/logos.css" rel="stylesheet">
@@ -22,7 +23,7 @@
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                 <a href="../index.html" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
                     <svg class="bi me-2" width="40" height="32" role="img" aria-label="Logo">
-                        <img id="headerLogo" src="../images/paw.svg"/>
+                        <img id="headerLogo" src="../images/logos/paw.svg"/>
                     </svg>
                 </a>
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
@@ -33,7 +34,7 @@
                 </ul>
 
                 <!-- Center logo -->
-                <img class="navbar-brand d-none d-xl-block" src="../images/Shop-do-Pet.svg" alt="Shop do Pet Logo">
+                <img class="navbar-brand d-none d-xl-block" src="../images/logos/Shop-do-Pet.svg" alt="Shop do Pet Logo">
 
                 <div class="text-end">
                     <a href="#"><button type="button" class="btn btn-outline-light me-2">Login</button></a>
@@ -49,7 +50,7 @@
             <form>
 
               <h1 class="h3 mb-3 fw-normal">Login</h1>
-          
+
               <div class="form-floating">
                 <input type="email" class="form-control" id="Name" placeholder="name@example.com">
                 <label for="floatingInput">Email address</label>
@@ -58,7 +59,7 @@
                 <input type="password" class="form-control" id="RePassword" placeholder="Password">
                 <label for="floatingPassword">Password</label>
               </div>
-          
+
               <div class="mb-3">
                 <a href="sign_up.html">Not registered yet? Sign up!</a>
               </div>
@@ -106,8 +107,7 @@
         </div>
     </footer>
 
-    <!-- Bootstrap, Font Awesome and jquery links  -->
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <!-- Bootstrap and jquery links  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </body>
